# Astralrs

./: .gitignore  Cargo.toml  README.md
arc/: Cargo.toml
arc/src/: application.rs  config.rs  error.rs  files.rs  lib.rs
arc/tests/: ApplicationCore.rs
fractal/: Cargo.toml
fractal/src/: codepage437.rs  color.rs  console.rs  embedding.rs  fastnoise.rs  fieldofview.rs  font.rs  fov.rs  fractal.rs  gui_helpers.rs  lib.rs  main_loop.rs  parsing.rs  random.rs  rex.rs  simple_console.rs  textblock.rs
fractal/src/backend/: font.rs  framebuffer.rs  init.rs  main_loop.rs  mainloop.rs  mod.rs  quadrender.rs  shader.rs  shader_strings.rs  simple_backend.rs  simple_console_backing.rs
fractal/src/geometry/: circle_bresenham.rs  line_bresenham.rs  line_vector.rs  lines.rs  mod.rs  point.rs  point3.rs  rect.rs
fractal/src/graphics/: framebuffer.rs  mod.rs  shader.rs  shader_strings.rs  simple_backend.rs
fractal/src/pathfinding/: astar.rs  dijkstra.rs  mod.rs
fractal/tests/: color.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  05-method-chaining.rs  06-optional-field.rs  07-repeated-field.rs  08-unrecognized-attribute.rs  09-redefined-prelude-types.rs  10-generic-struct.rs  progress.rs
rogue/: Cargo.toml  savegame.json
rogue/src/: components.rs  damage_system.rs  gui.rs  inventory_system.rs  main.rs  map.rs  map_index_system.rs  melee_compat_system.rs  menu.rs  monster_ai_system.rs  player.rs  random_table.rs  rect.rs  saveload_system.rs  spawner.rs  visibility_system.rs
