[package]
name = "arc"
version = "0.1.0"
authors = ["johnf <johnfish218@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
macros = { path = "../macros" }
toml = "0.5.5"
winit = "0.20.0"
glutin = "0.22.0"
zip = "0.5.4"
lyon = "0.15.3"
rodio = "0.10.0"
gilrs = "0.7.3"
image = "0.22.3"
gfx = "0.18.2"
serde = "1.0.104"
serde_derive = "1.0.104"