[package]
name = "fractal"
version = "0.1.0"
authors = ["johnf <johnfish218@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.22.0"
image = "0.22.3"
lazy_static = "1.4.0"
glow = "0.4.0"
rand = "0.7.3"
rand_xorshift = "0.2.0"
ultraviolet = "0.4.5"