[package]
name = 'fractal'
version = '0.1.0'
authors = ['johnf <johnfish218@gmail.com>']
edition = '2018'

[dependencies]
glow = '0.4.0'
image = '0.22.4'
rand_xorshift = '0.2.0'
serde_json = '1.0.44'
flate2 = '1.0.13'
byteorder = '1.3.2'
lazy_static = '1.4.0'
rayon = '1.3.0'
specs = '0.15.1'
ultraviolet = '0.4.5'
regex = '1.3.3'
rand = '0.7.3'
glutin = '0.22.0'
serde = '1.0.104'
serde_derive = '1.0.104'

[build-dependencies]
gl_generator = '0.14.0'
