[package]
name = "macros"
version = "0.1.0"
authors = ["johnf <johnfish218@gmail.com>"]
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version="1.0.13", features=["full", "parsing"] }
quote = "1.0.2"

[[test]]
name = "tests"
path = "tests/progress.rs"