[package]
name = "macros"
version = "0.1.0"
authors = ["johnf <johnfish218@gmail.com>"]
edition = "2018"
autotests = false
publish = false
workspace = ".."

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version="0.15.34", features=["full", "parsing"] }
quote = "0.6.3"
proc-macro2 = "0.4.30"

[[test]]
name = "tests"
path = "tests/progress.rs"