[package]
name = "macros"
version = "1.0.0"
authors = ["johnf <johnfish218@gmail.com>"]
edition = "2018"
autotests = false
publish = false
workspace = ".."

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version="1.0.13", features = ["extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.7"

[[test]]
name = "tests"
path = "tests/progress.rs"