[package]
name = "rogue"
version = "0.1.0"
authors = ["johnf <johnfish218@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros" }
fractal = { path = "../fractal" }
specs = "0.15.1"
specs-derive = "0.4.0"